fix(app): fixed undefined value

--- a/src/pages/partner.astro
+++ b/src/pages/partner.astro
@@ -63,32 +63,27 @@ const points = [
       "Regular inspections and maintenance",
     ],
   },
-  ,
 ];
 
 const safety = [
   {
     icon: "lock",
     title: "Security System",
-    points: [],
     image: keypadImage,
   },
   {
     icon: "sound-low",
     title: "Indoor and outdoor sensor to monitor noise",
-    points: [],
     image: soundImage,
   },
   {
     icon: "key-alt",
     title: "Smart Lock",
-    points: [],
     image: lockImage,
   },
   {
     icon: "verified-user",
     title: "Guest Screening and ID Verification",
-    points: [],
     image: screeningImage,
   },
 ];
@@ -115,11 +110,11 @@ const safety = [
             safety.map((point) => (
               <div class="flex gap-4 items-start">
                 <div class="mt-1 bg-black rounded-full  p-2 w-8 h-8 shrink-0">
-                  <Icon name={point.icon} class="invert" />
+                  <Icon name={point?.icon} class="invert" />
                 </div>
                 <div>
                   <h3 class="mt-1.5 font-semibold text-lg">{point.title}</h3>
-                  <Image src={point.image} alt="" class="mt-5" />
+                  <Image src={point?.image} alt="" class="mt-5" />
                 </div>
               </div>
             ))
@@ -133,14 +128,14 @@ const safety = [
             points.map((point) => (
               <div class="flex gap-4 items-start">
                 <div class="mt-1 bg-black rounded-full  p-2 w-8 h-8 shrink-0">
-                  <Icon name={point.icon} class="invert" />
+                  <Icon name={point?.icon} class="invert" />
                 </div>
                 <div>
-                  <h3 class="mt-1.5 font-semibold text-lg">{point.title}</h3>
+                  <h3 class="mt-1.5 font-semibold text-lg">{point?.title}</h3>
 
                   <ul class="mt-1 list-disc list-inside space-y-2">
-                    {point.points &&
-                      point.points.map((point) => <li>{point}</li>)}
+                    {point?.points &&
+                      point?.points.map((point) => <li>{point}</li>)}
                   </ul>
                 </div>
               </div>
