--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,10 +15,10 @@ import aboutImage from "assets/images/about.jpg";
   <Container>
     <!-- Hero -->
     <section class="relative overflow-x-clip">
-      <div class="mx-auto max-w-screen-2xl lg:flex">
+      <div class="mx-auto max-w-screen-2xl pb-16 lg:flex">
         <!-- Content -->
         <div
-          class="px-6 relative lg:max-w-[60%] pt-10 self-center lg:px-16 z-10">
+          class="px-6 relative lg:max-w-[60%]  self-center lg:px-16 z-10">
           <h1
             class="mb-8 text-4xl sm:text-6xl lg:text-7xl animate__fadeInUp animate__animated">
             Collection of quality furnished rental properties
@@ -66,7 +66,7 @@ import aboutImage from "assets/images/about.jpg";
             alt="Home"
             class="w-full h-full object-cover mt-24 scale-x-[-1]"
           />
-          <div class="absolute top-[22.5%] right-[-10%] w-64 h-64">
+          <div class="absolute top-[32.5%] right-[-10%] w-64 h-64">
             <div
               class="absolute w-full h-full scale-105 bg-[#ffcc4d] rounded-full left-5">
             </div>
@@ -76,36 +76,6 @@ import aboutImage from "assets/images/about.jpg";
               alt="Home"
               class="relative w-full rounded-full aspect-square object-cover scale-x-[-1]"
             />
-          </div>
-        </div>
-      </div>
-
-      <div
-        class="grid max-w-screen-xl gap-12 px-16 py-24 mx-auto md:grid-cols-2 md:gap-0">
-        <div
-          class="relative grid items-center w-11/12 animate__animated animate__fadeInUp animate__slow">
-          <Image
-            src={heroImage3}
-            alt="Home"
-            class="relative object-cover w-full h-56 rounded-full"
-          />
-
-          <div class="absolute z-10 rounded-full -right-12 bg-[#ffcc4d]">
-            <Icon name="link" class="w-6 m-10 text-white" />
-          </div>
-        </div>
-
-        <div class="grid items-center sm:pl-4 md:ml-12">
-          <div class="relative flex items-center">
-            <div
-              class="block w-px h-32 bg-black sm:mr-8 animate__animated animate__fadeIn animate__slow animate__delay-1s">
-            </div>
-
-            <p
-              class="text-3xl text-gray-600 animate__animated animate__fadeInRight animate__slow">
-              We prioritize both the aesthetics and amenities of our homes, so
-              our guests can persist their lifestyle.
-            </p>
           </div>
         </div>
       </div>
